--- a/public/assets/styles/toastify.scss
+++ b/public/assets/styles/toastify.scss
@@ -18,6 +18,7 @@
 
 .Toastify__toast-body {
   display: grid;
+  align-items: center;
   grid-template-columns: auto 1fr;
   grid-template-rows: 100%;
   height: 100%;
